[project]
name = "Leistungskurve_2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cedric Rissi", email = "cedric.rissi2003@gmail.com"},
]
dependencies = [
    "pandas>=3.0.3",
    "pip>=26.1.1",
    "plotly-express>=0.4.1",
    "nbformat>=5.10.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
