[project]
name = "Leistungskurve_2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cedric Rissi", email = "cedric.rissi2003@gmail.com"},
]
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "pip>=26.0.0",
    "plotly>=5.0.0",
    "nbformat>=5.10.0",
    "matplotlib>=3.8.0",
    "numpy>=2.0.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
